--- a/app/src/main/res/layout/exo_player_control_view.xml
+++ b/app/src/main/res/layout/exo_player_control_view.xml
@@ -4,81 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/exo_controller"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#A8000000">
+    android:layout_height="match_parent">
 
     <FrameLayout
+        android:id="@+id/exo_controller_cont"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="8dp"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/exo_back"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:backgroundTint="#00FFFFFF"
-                android:src="@drawable/ic_round_arrow_back_ios_new_24"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/exo_ep_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_bold"
-                    android:textColor="@color/bg_white"
-                    android:textSize="16sp"
-                    tools:text="@string/ep" />
-
-                <TextView
-                    android:id="@+id/exo_anime_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.66"
-                    android:fontFamily="@font/poppins_bold"
-                    android:singleLine="false"
-                    android:textColor="@color/bg_white"
-                    android:textSize="14sp"
-                    tools:text="@string/anime" />
-
-            </LinearLayout>
-
-            <ImageButton
-                android:id="@+id/exo_source"
-                android:layout_width="64dp"
-                android:layout_height="48dp"
-                android:backgroundTint="#00FFFFFF"
-                android:src="@drawable/ic_round_source_24"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
-
-            <ImageButton
-                android:id="@+id/exo_quality"
-                android:layout_width="64dp"
-                android:layout_height="48dp"
-                android:backgroundTint="#00FFFFFF"
-                android:src="@drawable/ic_round_high_quality_24"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
-
-        </LinearLayout>
+        android:layout_height="match_parent"
+        android:background="#A8000000">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -94,31 +26,54 @@
                 android:layout_marginBottom="28dp"
                 android:orientation="vertical">
 
-                <androidx.cardview.widget.CardView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="#00FFFFFF"
-                    app:cardCornerRadius="16dp"
-                    app:cardElevation="0dp">
+                    android:orientation="vertical">
 
-                    <ImageButton
-                        android:id="@+id/exo_lock"
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:cardBackgroundColor="#00FFFFFF"
+                        app:cardCornerRadius="16dp"
+                        app:cardElevation="0dp">
+
+                        <ImageButton
+                            android:id="@+id/exo_slider_lock"
+                            android:layout_width="wrap_content"
+                            android:layout_height="48dp"
+                            android:backgroundTint="#00FFFFFF"
+                            app:srcCompat="@drawable/ic_round_piano_24"
+                            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
                         android:layout_width="wrap_content"
-                        android:layout_height="48dp"
-                        android:backgroundTint="#00FFFFFF"
-                        app:srcCompat="@drawable/ic_round_lock_open_24"
-                        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
-                </androidx.cardview.widget.CardView>
+                        android:layout_height="wrap_content"
+                        app:cardBackgroundColor="#00FFFFFF"
+                        app:cardCornerRadius="16dp"
+                        app:cardElevation="0dp">
+
+                        <ImageButton
+                            android:id="@+id/exo_lock"
+                            android:layout_width="wrap_content"
+                            android:layout_height="48dp"
+                            android:backgroundTint="#00FFFFFF"
+                            app:srcCompat="@drawable/ic_round_lock_open_24"
+                            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/exo_skip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
+                    android:layout_gravity="bottom|end"
                     android:clickable="true"
                     android:focusable="true"
                     app:cardBackgroundColor="@color/nav_bg_inv"
-                    app:cardCornerRadius="16dp">
+                    app:cardCornerRadius="16dp"
+                    app:rippleColor="#54FFFFFF">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -305,16 +260,84 @@
                     tools:ignore="ContentDescription" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="8dp"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/exo_back"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:backgroundTint="#00FFFFFF"
+                android:src="@drawable/ic_round_arrow_back_ios_new_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/exo_ep_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textColor="@color/bg_white"
+                    android:textSize="16sp"
+                    tools:text="@string/ep" />
+
+                <TextView
+                    android:id="@+id/exo_anime_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.75"
+                    android:fontFamily="@font/poppins"
+                    android:singleLine="false"
+                    android:textColor="@color/bg_white"
+                    android:textSize="14sp"
+                    tools:text="@string/anime" />
+
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/exo_source"
+                android:layout_width="64dp"
+                android:layout_height="48dp"
+                android:backgroundTint="#00FFFFFF"
+                android:src="@drawable/ic_round_source_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
+
+            <ImageButton
+                android:id="@+id/exo_quality"
+                android:layout_width="64dp"
+                android:layout_height="48dp"
+                android:backgroundTint="#00FFFFFF"
+                android:src="@drawable/ic_round_high_quality_24"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
+
+        </LinearLayout>
+
     </FrameLayout>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/exo_unlock_cont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_margin="8dp"
-        android:visibility="gone"
-        app:cardBackgroundColor="#00FFFFFF"
+        app:cardBackgroundColor="#A8000000"
         app:cardCornerRadius="16dp"
         app:cardElevation="0dp">
 
@@ -323,6 +346,7 @@
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:backgroundTint="#00FFFFFF"
+            android:visibility="gone"
             app:srcCompat="@drawable/ic_round_lock_24"
             tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
     </androidx.cardview.widget.CardView>
