--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,19 +27,23 @@
 
                 <FrameLayout
                     android:layout_width="0dp"
-                    android:layout_height="64dp"
-                    android:layout_weight="1">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:minHeight="64dp">
 
                     <LinearLayout
                         android:id="@+id/homeUserDataContainer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="gone"
+                        tools:visibility="visible">
 
                         <TextView
                             android:id="@+id/homeUserName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginBottom="-4dp"
                             android:fontFamily="@font/poppins_bold"
                             android:gravity="center"
                             android:text="@string/username"
