--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -40,8 +40,7 @@
     <style name="Theme.Saikou.PopupOverlay" parent="Theme.Saikou" />
 
     <style name="Theme.Saikou.Exoplayer" parent="@style/Theme.Saikou.NoActionBar">
-<!--        <item name="android:statusBarColor">@android:color/black</item>-->
-<!--        <item name="android:navigationBarColor">@android:color/black</item>-->
+        <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="o_mr1">shortEdges</item>
     </style>
 
     <style name="DialogTheme" parent="Theme.Saikou">
