--- a/app/src/main/res/layout/exo_player_control_view.xml
+++ b/app/src/main/res/layout/exo_player_control_view.xml
@@ -26,30 +26,6 @@
                 android:layout_marginBottom="28dp"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:cardBackgroundColor="#00FFFFFF"
-                        app:cardCornerRadius="16dp"
-                        app:cardElevation="0dp">
-
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:cardBackgroundColor="#00FFFFFF"
-                        app:cardCornerRadius="16dp"
-                        app:cardElevation="0dp">
-
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/exo_skip"
                     android:layout_width="wrap_content"
@@ -274,9 +250,10 @@
                     android:id="@+id/exo_ep_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:ellipsize="marquee"
                     android:fontFamily="@font/poppins_bold"
+                    android:singleLine="true"
                     android:textColor="@color/bg_white"
-                    android:textSize="16sp"
                     tools:text="@string/ep" />
 
                 <TextView
@@ -287,7 +264,17 @@
                     android:fontFamily="@font/poppins"
                     android:singleLine="false"
                     android:textColor="@color/bg_white"
-                    android:textSize="14sp"
+                    tools:text="@string/anime" />
+
+                <TextView
+                    android:id="@+id/exo_video_details"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.75"
+                    android:fontFamily="@font/poppins"
+                    android:singleLine="false"
+                    android:textAllCaps="false"
+                    android:textColor="@color/bg_white"
                     tools:text="@string/anime" />
 
             </LinearLayout>
