--- a/app/src/main/res/layout/exo_player_view.xml
+++ b/app/src/main/res/layout/exo_player_view.xml
@@ -43,50 +43,6 @@
 
     </com.google.android.exoplayer2.ui.AspectRatioFrameLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/exo_fast_rewind"
-            android:layout_width="1000dp"
-            android:layout_height="1000dp"
-            android:clickable="true"
-            android:alpha="0"
-            tools:alpha="1"
-            android:focusable="true"
-            app:cardBackgroundColor="#80000000"
-            app:cardCornerRadius="500dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/middle"
-            app:layout_constraintTop_toTopOf="parent"
-            app:strokeWidth="0dp" />
-
-        <View
-            android:id="@+id/middle"
-            android:layout_width="128dp"
-            android:layout_height="match_parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/exo_fast_forward"
-            android:layout_width="1000dp"
-            app:cardCornerRadius="500dp"
-            android:layout_height="1000dp"
-            android:alpha="0"
-            tools:alpha="1"
-            android:clickable="true"
-            android:focusable="true"
-            app:cardBackgroundColor="#80000000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/middle"
-            app:layout_constraintTop_toTopOf="parent"
-            app:strokeWidth="0dp"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     <com.google.android.exoplayer2.ui.SubtitleView
         android:id="@id/exo_subtitles"
         android:layout_width="match_parent"
@@ -98,6 +54,73 @@
 
     </com.google.android.exoplayer2.ui.SubtitleView>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/exo_fast_rewind"
+            android:layout_width="1000dp"
+            android:layout_height="1000dp"
+            android:alpha="0"
+            app:cardBackgroundColor="#80000000"
+            app:cardCornerRadius="500dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/middle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:strokeWidth="0dp"
+            tools:alpha="1" />
+
+        <View
+            android:id="@+id/middle"
+            android:layout_width="128dp"
+            android:layout_height="match_parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/exo_fast_forward"
+            android:layout_width="1000dp"
+            android:layout_height="1000dp"
+            android:alpha="0"
+            app:cardBackgroundColor="#80000000"
+            app:cardCornerRadius="500dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/middle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:strokeWidth="0dp"
+            tools:alpha="1" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="64dp"
+        android:layout_marginBottom="64dp"
+        android:orientation="horizontal">
+
+        <View
+            android:id="@+id/exo_rewind_area"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true" />
+
+        <View
+            android:layout_width="128dp"
+            android:layout_height="match_parent" />
+
+        <View
+            android:id="@+id/exo_forward_area"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true" />
+    </LinearLayout>
+
     <View android:id="@id/exo_controller_placeholder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
@@ -107,10 +130,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|end"
-        android:layout_margin="8dp"
+        android:layout_margin="16dp"
         android:clipChildren="true"
-        android:translationX="200dp"
-        app:cardBackgroundColor="#000"
+        android:visibility="gone"
+        app:cardBackgroundColor="#A9000000"
         app:cardCornerRadius="24dp"
         app:contentPadding="4dp">
 
@@ -149,10 +172,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_margin="8dp"
+        android:layout_margin="16dp"
         android:clipChildren="true"
-        android:translationX="-200dp"
-        app:cardBackgroundColor="#000"
+        android:visibility="gone"
+        app:cardBackgroundColor="#A9000000"
         app:cardCornerRadius="24dp"
         app:contentPadding="4dp">
 
