--- a/app/src/main/res/layout/item_character_details.xml
+++ b/app/src/main/res/layout/item_character_details.xml
@@ -20,6 +20,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="-16dp"
         android:layout_marginEnd="32dp"
+        android:textIsSelectable="true"
         android:layout_marginBottom="32dp"
         android:alpha="0.58"
         tools:ignore="TextContrastCheck"
