--- a/app/src/main/res/layout/item_episode_grid.xml
+++ b/app/src/main/res/layout/item_episode_grid.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="108dp"
+    android:layout_height="96dp"
     android:layout_margin="8dp"
+    android:clipToPadding="false"
     android:translationZ="8dp"
     app:cardCornerRadius="16dp"
     app:cardElevation="4dp">
@@ -12,7 +13,7 @@
     <ImageView
         android:id="@+id/itemEpisodeImage"
         android:layout_width="match_parent"
-        android:layout_height="108dp"
+        android:layout_height="96dp"
         android:scaleType="centerCrop"
         tools:ignore="ContentDescription,ImageContrastCheck"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
@@ -59,9 +60,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:clipToPadding="false"
         android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/itemEpisodeFiller"
@@ -70,8 +72,8 @@
             android:ellipsize="marquee"
             android:fontFamily="@font/poppins_bold"
             android:text="@string/filler"
-            android:textColor="@color/bg_white"
             android:textAlignment="center"
+            android:textColor="@color/bg_white"
             android:textStyle="italic"
             android:visibility="gone"
             app:lineHeight="15sp" />
@@ -80,6 +82,7 @@
             android:id="@+id/itemEpisodeTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="-4sp"
             android:ellipsize="end"
             android:fontFamily="@font/poppins_bold"
             android:maxLines="3"
