--- a/app/src/main/res/layout/exo_player_control_view.xml
+++ b/app/src/main/res/layout/exo_player_control_view.xml
@@ -22,8 +22,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
-                android:layout_marginEnd="24dp"
-                android:layout_marginBottom="28dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
                 android:orientation="vertical">
 
                 <com.google.android.material.card.MaterialCardView
@@ -48,10 +48,11 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="4dp"
+                            android:layout_marginStart="-6dp"
+                            android:layout_marginTop="1dp"
                             android:fontFamily="@font/poppins_bold"
                             android:layoutDirection="rtl"
-                            android:paddingTop="2dp"
+                            android:padding="4dp"
                             android:text="85+"
                             android:textColor="?attr/colorSecondary"
                             android:textSize="14sp"
@@ -89,14 +90,26 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="-8dp"
+                    android:layout_marginEnd="-8dp"
                     android:layout_weight="1"
                     android:orientation="vertical">
+
+                    <com.google.android.exoplayer2.ui.DefaultTimeBar
+                        android:id="@id/exo_progress"
+                        android:layout_width="match_parent"
+                        android:layout_height="24dp"
+                        app:played_color="@color/pink_700"
+                        app:scrubber_color="@color/pink_500"
+                        tools:ignore="SpeakableTextPresentCheck" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="-6dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
 
@@ -107,10 +120,9 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/poppins"
                             android:includeFontPadding="false"
-                            android:paddingLeft="4dp"
-                            android:paddingRight="4dp"
                             android:textColor="#F1F1F1"
-                            android:textSize="16sp" />
+                            android:textSize="14sp"
+                            tools:text="00:00" />
 
                         <TextView
                             android:id="@id/exo_duration"
@@ -119,22 +131,13 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/poppins"
                             android:includeFontPadding="false"
-                            android:paddingLeft="4dp"
-                            android:paddingRight="4dp"
                             android:textAlignment="viewEnd"
                             android:textColor="#FFBEBEBE"
-                            android:textSize="16sp" />
+                            android:textSize="14sp"
+                            tools:ignore="TextContrastCheck"
+                            tools:text="24:00" />
 
                     </LinearLayout>
-
-                    <com.google.android.exoplayer2.ui.DefaultTimeBar
-                        android:id="@id/exo_progress"
-                        android:layout_width="match_parent"
-                        android:layout_height="16dp"
-                        android:layout_marginBottom="16dp"
-                        app:played_color="@color/pink_700"
-                        app:scrubber_color="@color/pink_500"
-                        tools:ignore="SpeakableTextPresentCheck" />
 
                 </LinearLayout>
 
@@ -242,8 +245,9 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
@@ -251,7 +255,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="marquee"
-                    android:fontFamily="@font/poppins_bold"
+                    android:fontFamily="@font/poppins"
                     android:singleLine="true"
                     android:textColor="@color/bg_white"
                     tools:text="@string/ep" />
@@ -260,10 +264,12 @@
                     android:id="@+id/exo_anime_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:alpha="0.75"
+                    android:alpha="0.66"
                     android:fontFamily="@font/poppins"
                     android:singleLine="false"
                     android:textColor="@color/bg_white"
+                    android:textSize="12sp"
+                    tools:ignore="TextContrastCheck"
                     tools:text="@string/anime" />
 
                 <TextView
